[package]
name = "danish-osaka-u-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }
fs-err = "2.7.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
