[package]
name = "danish-osaka-u-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }
danish-dictionary-parser = { git = "https://github.com/TonalidadeHidrica/danish-dictionary-parser/", version = "0.1.0" }
env_logger = "0.9.0"
fs-err = "2.7.0"
itertools = "0.10.3"
log = "0.4.17"
markup5ever = "0.11.0"
once_cell = "1.13.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = { git = "https://github.com/TonalidadeHidrica/scraper/", branch = "serialize-entire-document" }
serde_json = "1.0.83"
